--- a/assets/template/header.html
+++ b/assets/template/header.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <script src="../javascript/main.js"></script>
+    <title>header Charly Tango</title>
+</head>
+<body>
 
     <div class="header w-100">
         <div class="d-flex justify-around align-center">
@@ -13,7 +25,7 @@
                 SSTV 26.685 FM
             </p>
         </div>
-        <div class="d-flex w-100 justify-center">
+        <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
             <img src="./assets/img/kodax-02.gif" alt="">
         </div>
         <div class="welcome-text">
@@ -24,3 +36,5 @@
         </div>        
     </div>
     
+</body>
+</html>
