modified navbar with banner

--- a/assets/template/navbar-top.html
+++ b/assets/template/navbar-top.html
@@ -11,9 +11,16 @@
 </head>
 <body>
     <div class="nav d-flex w-100 bg-page">
-        <div onclick="openSTartPage()" class="main-menu">Startseite</div>
+        <div>
+            <div class="d-none"></div>
+        </div>
+        <div onclick="openSTartPage()" class="">
+            <img id="navImg" class="navbarbanner d-none" src="./assets/img/bannercut.png" alt="">
+        </div>
+
         <div onclick="openCtMenu()" class="main-menu">HAUPTMENÜ</div>
 
+      
         <!-- <div onclick="openCtMenu()" class="main-menu">Startseite</div> -->
     </div>
 </body>
