--- a/assets/template/navbar.html
+++ b/assets/template/navbar.html
@@ -14,9 +14,9 @@
         <div>
             <img onclick="closeSubMenu()" class="cross" src="./assets/img/cross.png" alt="Close menu Cross"> 
             
-            <div class="navbar d-flex flex-wrap">
+            <div class="navbar flex-wrap">
                         <!-- CT-hauptmenü -->
-                    <nav class="d-flex column txt-center active" onclick="openNavEntry(event)">
+                    <nav class="d-flex column txt-center " onclick="openNavEntry(event)">
                         <a class="bg-green">CT - Hauptmenü</a>
                         <a href="./about-us.html">Über CharlyTango</a>
                         <a href="./ct-today.html">CharlyTango Heute</a>
@@ -25,7 +25,6 @@
                         <a href="./mitglieder-liste.html">Mitgliederliste</a>
                         <a href="./neue-mitglieder.html">Neue Mitglieder</a>
                         <a href="#">QSL-Karten</a>
-                        <a href="#">Bilder Galerie</a>
                         <a href="#">CT-Frequenzen</a>
                         <a href="#">CT-Downloads</a>
                         <a href="#">Prefix - Liste</a>
@@ -62,7 +61,7 @@
                         <a href="#">Locatorberechnung</a>
                         <a href="#">Buchstabier-Alphabet</a>
                     </nav>
-                    <div>
+                    
                             <!--Teamspeak-Menü-->
                         <nav class="d-flex column txt-center"  onclick="openNavEntry(event)">
                             <a class="bg-green">Teamspeak 3</a>
@@ -83,9 +82,9 @@
                             <a href="#">Mikrofonbelegung PMR</a>
                             <a href="#">Anschluss an PC</a>
                         </nav>
-                        </div>    
+                            
                             <!--PR-Technik-->
-                    <div>
+                    
                         <nav class="d-flex column txt-center" onclick="openNavEntry(event)">
                             <a class="bg-green">PR-Technik</a>
                             <a href="#">Geschichte PR</a>
@@ -101,8 +100,8 @@
                             <a href="#">Wetterwarnung</a>
                             <a href="#">Blitzortung</a>
                         </nav>
-                    </div>
-                    <div>    
+                
+                    
                         <!--Interace-->
                         <nav class="d-flex column txt-center" onclick="openNavEntry(event)">
                             <a class="bg-green">Interace SSTV</a>
@@ -115,7 +114,7 @@
                             <a href="#">Funkmagazin</a>
                             <a href="#">DARC</a>
                         </nav>
-                    </div>    
+                       
             </div>
         </div>    
     </div>   
