add eventlistener onScroll

--- a/assets/template/header.html
+++ b/assets/template/header.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <div class="header w-100">
+    <div id="header" class="header w-100">
         <div class="d-flex justify-around align-center">
             <img src="./assets/img/funk00010.gif" alt="">
             <img src="./assets/img/ban_ctfrac.png" alt="">
