--- a/assets/template/navbar-top.html
+++ b/assets/template/navbar-top.html
@@ -11,9 +11,7 @@
 </head>
 <body>
     <div class="nav d-flex w-100 bg-page">
-        <div>
-            <div class="d-none"></div>
-        </div>
+        <div></div>
         <div onclick="openSTartPage()" class="">
             <img id="navImg" class="navbarbanner d-none" src="./assets/img/bannercut.png" alt="">
         </div>
