--- a/assets/template/navbar-top.html
+++ b/assets/template/navbar-top.html
@@ -12,7 +12,7 @@
 <body>
     <div class="nav d-flex w-100 bg-page">
         <div></div>
-        <div onclick="openSTartPage()" class="">
+        <div onclick="openSTartPage()" class="open-start-page-btn">
             <img id="navImg" class="navbarbanner d-none" src="./assets/img/bannercut.png" alt="">
         </div>
 
