--- a/assets/template/navbar.html
+++ b/assets/template/navbar.html
@@ -16,7 +16,7 @@
             
             <div class="navbar flex-wrap">
                         <!-- CT-hauptmenü -->
-                    <nav class="d-flex column txt-center " onclick="openNavEntry(event)">
+                    <nav class="d-flex column txt-center active" onclick="openNavEntry(event)">
                         <a class="bg-green">CT - Hauptmenü</a>
                         <a href="./about-us.html">Über CharlyTango</a>
                         <a href="./ct-today.html">CharlyTango Heute</a>
@@ -24,11 +24,10 @@
                         <a href="./neues-mitglied.html">Neuanmeldung</a>
                         <a href="./mitglieder-liste.html">Mitgliederliste</a>
                         <a href="./neue-mitglieder.html">Neue Mitglieder</a>
-                        <a href="#">QSL-Karten</a>
-                        <a href="#">CT-Frequenzen</a>
-                        <a href="#">CT-Downloads</a>
-                        <a href="#">Prefix - Liste</a>
-                        <a href="#">Gästebuch</a>
+                        <a href="./qsl-karten.html">QSL-Karten</a>
+                        <a href="./ct-frequenzen.html">CT-Frequenzen</a>
+                        <a href="./downloads.html">CT-Downloads</a>
+                        <a href="./prefix.html">Prefix - Liste</a>
                     </nav>   
                         <!--Funkbereich-->
                     <nav class="d-flex column txt-center" onclick="openNavEntry(event)">
