--- a/assets/template/navbar.html
+++ b/assets/template/navbar.html
@@ -59,31 +59,23 @@
                         <a href="#">Locator - Datenbank</a>
                         <a href="#">Locatorberechnung</a>
                         <a href="#">Buchstabier-Alphabet</a>
-                    </nav>
-                    
+                    </nav> 
                             <!--Teamspeak-Menü-->
                         <nav class="d-flex column txt-center"  onclick="openNavEntry(event)">
                             <a class="bg-green">Teamspeak 3</a>
-                            <a href="#">TS-3 Download</a>
-                            <a href="#">TS-3 Installationshilfe</a>
-                            <a href="#">TS-3 GW Installationshilfe</a>
-                            <a href="#">TS-3 Gateway Commander</a>
-                            <a href="#">TS-3 Schnellconect</a>
-                            <a href="#">Bllick auf TS-3 Server</a>
-                        </nav>
-                            
+                            <a target="_blank" href="https://www.teamspeak.de/download/">TS-3 Download</a>
+                            <a href="./ts3-inst-hilfe.html">TS-3 Installationshilfe</a>
+                        </nav>  
                             <!--GW-Technik-Menü-->
                         <nav class="d-flex column txt-center"  onclick="openNavEntry(event)">
                             <a class="bg-green">GW-Technik</a>
-                            <a href="#">Einfaches Interface</a>
-                            <a href="#">Soundkarteninterface</a>
-                            <a href="#">Mikrofonbelegung CB</a>
+                            <a href="./gw-interface.html">Einfaches Interface</a>
+                            <a target="_blank" href="https://freiesfunknetz.com/viewpage.php?page_id=258">Soundkarteninterface</a>
+                            <a href="./cb-mikrofon-belegung.html">Mikrofonbelegung CB</a>
                             <a href="#">Mikrofonbelegung PMR</a>
                             <a href="#">Anschluss an PC</a>
                         </nav>
-                            
                             <!--PR-Technik-->
-                    
                         <nav class="d-flex column txt-center" onclick="openNavEntry(event)">
                             <a class="bg-green">PR-Technik</a>
                             <a href="#">Geschichte PR</a>
@@ -99,13 +91,11 @@
                             <a href="#">Wetterwarnung</a>
                             <a href="#">Blitzortung</a>
                         </nav>
-                
-                    
-                        <!--Interace-->
+                        <!--Interface-->
                         <nav class="d-flex column txt-center" onclick="openNavEntry(event)">
-                            <a class="bg-green">Interace SSTV</a>
-                            <a href="#">Anleitung Interace SSTV</a>
-                            <a href="#">Download Interace SSTV</a>
+                            <a class="bg-green">Interface SSTV</a>
+                            <a href="#">Anleitung Interface SSTV</a>
+                            <a href="#">Download Interface SSTV</a>
                         </nav>
                         <!--Allgemeine News-->
                         <nav class="d-flex column txt-center" onclick="openNavEntry(event)">
