--- a/assets/template/navbar.html
+++ b/assets/template/navbar.html
@@ -48,17 +48,16 @@
                         <!--Allgemeines-->
                     <nav class="d-flex column txt-center"  onclick="openNavEntry(event)">
                         <a class="bg-green">Allgemeines</a>
-                        <a href="#">Bundesnetzagentur</a>
-                        <a href="#">GW Anmeldung BNetzA</a>
-                        <a href="#">TeamViewer</a>
-                        <a href="#">AFU-Prüfung</a>
-                        <a href="#">CB-Funk Schutzzone</a>
-                        <a href="#">Wellenausbreitung</a>
-                        <a href="#">HF-Störungen</a>
-                        <a href="#">Locator - Bestimmung</a>
-                        <a href="#">Locator - Datenbank</a>
-                        <a href="#">Locatorberechnung</a>
-                        <a href="#">Buchstabier-Alphabet</a>
+                        <a target="_blank" href="https://www.bundesnetzagentur.de/">Bundesnetzagentur</a>
+                        <a target="_blank" href="https://www.teamviewer.com/de/">TeamViewer</a>
+                        <a target="_blank" href="https://www.afup.a36.de/">AFU-Prüfung</a>
+                        <a href="./cb-schutzzone.html">CB-Funk Schutzzone</a>
+                        <a href="./hochfrequenzwellen.html">Hochfrequenzwellen</a>
+                        <a href="./wellenausbreitung.html">Wellenausbreitung</a>
+                        <a href="hf-stoerungen.html">HF-Störungen</a>
+                        <a target="_blank" href="http://qthlocator.free.fr/index.php">Locator - Bestimmung</a>
+                        <a target="_blank" href="https://www.qsl.net/404.html">Locatorberechnung</a>
+                        <a href="./alphabet.html">Buchstabier-Alphabet</a>
                     </nav> 
                             <!--Teamspeak-Menü-->
                         <nav class="d-flex column txt-center"  onclick="openNavEntry(event)">
@@ -72,8 +71,7 @@
                             <a href="./gw-interface.html">Einfaches Interface</a>
                             <a target="_blank" href="https://freiesfunknetz.com/viewpage.php?page_id=258">Soundkarteninterface</a>
                             <a href="./cb-mikrofon-belegung.html">Mikrofonbelegung CB</a>
-                            <a href="#">Mikrofonbelegung PMR</a>
-                            <a href="#">Anschluss an PC</a>
+                            <a href="./pmr-mikrofon-belegung.html">Mikrofonbelegung PMR</a>
                         </nav>
                             <!--PR-Technik-->
                         <nav class="d-flex column txt-center" onclick="openNavEntry(event)">
