Submenu Live  / PR-Technik / Wetter / Allgemeine News

--- a/assets/template/navbar.html
+++ b/assets/template/navbar.html
@@ -26,7 +26,6 @@
                         <a href="./neue-mitglieder.html">Neue Mitglieder</a>
                         <a href="./qsl-karten.html">QSL-Karten</a>
                         <a href="./ct-frequenzen.html">CT-Frequenzen</a>
-                        <a href="./downloads.html">CT-Downloads</a>
                         <a href="./prefix.html">Prefix - Liste</a>
                     </nav>   
                         <!--Funkbereich-->
@@ -76,30 +75,32 @@
                             <!--PR-Technik-->
                         <nav class="d-flex column txt-center" onclick="openNavEntry(event)">
                             <a class="bg-green">PR-Technik</a>
-                            <a href="#">Geschichte PR</a>
-                            <a href="#">Was ist PR</a>
-                            <a href="#">PR Betriebsart</a>
-                            <a href="#">PR auf CB-Funk</a>
-                            <a href="#">PR-Download</a>
+                            <a href="./pr-geschichte.html">Geschichte PR</a>
+                            <a href="./was-ist-pmr.html">Was ist PR</a>
+                            <a href="pr-betriebsarten.html">PR Betriebsart</a>
+                            <a href="pr-auf-cb.html">PR auf CB-Funk</a>
                         </nav>
                         <!--Weather-->
                         <nav class="d-flex column txt-center" onclick="openNavEntry(event)">
                             <a class="bg-green">Wetter Info</a>
-                            <a href="#">Blitzradar</a>
-                            <a href="#">Wetterwarnung</a>
-                            <a href="#">Blitzortung</a>
-                        </nav>
-                        <!--Interface-->
-                        <nav class="d-flex column txt-center" onclick="openNavEntry(event)">
-                            <a class="bg-green">Interface SSTV</a>
-                            <a href="#">Anleitung Interface SSTV</a>
-                            <a href="#">Download Interface SSTV</a>
+                            <a target="_blank" href="http://www.wunderwetter.de/index.htm?/page/blitz/blitz1.html">Blitzradar</a>
+                            <a target="_blank" href="http://www.unwetterzentrale.de/uwz/">Wetterwarnung</a>
+                            <a target="_blank" href="https://www.blitzortung.org/en/live_lightning_maps.php">Blitzortung</a>
                         </nav>
                         <!--Allgemeine News-->
                         <nav class="d-flex column txt-center" onclick="openNavEntry(event)">
                             <a class="bg-green">Allgemeine News</a>
-                            <a href="#">Funkmagazin</a>
-                            <a href="#">DARC</a>
+                            <a target="_blank" href="https://funkmagazin.de/">Funkmagazin</a>
+                            <a target="_blank" href="https://www.darc.de/home/">DARC</a>
+                        </nav>                        
+                        <!--Live-->
+                        <nav class="d-flex column txt-center" onclick="openNavEntry(event)">
+                            <a class="bg-green">Live</a>
+                            <a target="_blank" href="http://funknetzdeutschland.ddns.net:8000/stream">Funknetz Deutschland</a>
+                            <a target="_blank" href="http://funknetzdeutschland.ddnsking.com:8073/">WEB SDR Live</a>
+                            <a target="_blank" href="http://www.websdr.org/"><img class="radio" src="./assets/img/radioani.gif" alt="TEST"></a>
+                            <a target="_blank" href="http://2bs7fpf8ahdewu8a.myfritz.net:8901/#freq=149100000,mod=nfm,sql=-150">WEB SDR Live DM0MAX</a>
+                            <a target="_blank" href="http://www.radio-station.de/">AFU Relais Zugspitze</a>
                         </nav>
                        
             </div>
